--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -1,4 +1,38 @@
 .keyboard {
   display: flex;
+  width: 90%;
   flex-wrap: wrap;
+  gap: 20px;
+  margin: 5em auto;
+}
+
+
+.keyboard__key {
+  width: 5em;
+  height: 5em;
+  background-image: -webkit-gradient(
+    linear,left bottom,left top,
+    color-stop(0.27, rgb(212,216,219)),
+    color-stop(0.64, rgb(213,217,220)),
+    color-stop(0.95, rgb(230,233,235)),
+    color-stop(1, rgb(191,191,191))
+  );
+  border-radius: 10px;
+  -webkit-box-shadow: 4px 4px 5px 0px rgba(100,100,100,0.5);
+  -moz-box-shadow: 4px 4px 5px 0px rgba(100,100,100,0.5);
+  box-shadow: 4px 4px 5px 0px rgba(100,100,100,0.5);
+}
+
+.keyboard__row {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.key_wide {
+  width: 8em;
+}
+
+.key_space {
+  width: 30em;
 }
