--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -1,3 +1,11 @@
+.textarea {
+  width: 90%;
+  display: block;
+  font-size: 3rem;
+  margin: 2em auto;
+  box-shadow: 4px 4px 5px 0px rgba(100,100,100,0.5);
+}
+
 .keyboard {
   display: flex;
   width: 90%;
